02 Jun 2006; Roy Marples <uberlord@gentoo.org>

   Setup a siglongjmp for SIGTERM so we can execute external programs
   safely - like resolvconf -d.

** dhcpcd-2.0.5 Released

21 Apr 2006; Roy Marples <uberlord@gentoo.org>

   No longer exit when an infinite lease time is detected.
   This allows us to be started by start-stop-daemon implementations that
   detect if we're still running after a short period of time.

12 Apr 2006; Roy Marples <uberlord@gentoo.org>

   Added new option -v to specify a logging level.
   Implemented a better logging and debugging sytem.
   We now default to doing arp checks.

11 Apr 2006; Roy Marples <uberlord@gentoo.org>

   We now set hostname by default if current hostname is blank or (none)
   Exit with signal code again (do'h).
   Report timeout messages to stderr. 

** dhcpcd-2.0.4 Released

07 Apr 2006; Roy Marples <uberlord@gentoo.org>

   Remove klunky fd closing and replace with saner fnctl FD_CLOEXEC.

27 Mar 2006; Roy Marples <uberlord@gentoo.org>

   Report which file is causing fopen to error.

22 Mar 2006; Roy Marples <uberlord@gentoo.org>

   Native support for resolvconf added.

20 Mar 2006; Roy Marples <uberlord@gentoo.org>

   Accepted a patch from Beech Horn that fixed some issues when compiling
   with the pedantic flag.

** dhcpcd-2.0.3 Released

10 Mar 2006; Simon Kelley <simon@thekelleys.org.uk>

    Fixed problems with previous changes to avoid buffer-fillage.
    There were two problems: one with not checking for non-existance of
    the UDP socket, and a second, a race between select() and sigalarm.
    
** dhcpcd-2.0.2 Released

24 Feb 2006; Roy Marples <uberlord@gentoo.org>

    When a RFC violating space seperated domain name hits treat it like
    a search path, RFC 3397 so we don't break too many clients.

24 Feb 2006; Simon Kelley <simon@thekelleys.org.uk>
    
   Fixed file descriptor leak. Previously, the raw and UDP sockets were
   inherited by the dhcpcd.exe script and its children. If the children