@@ -23,18 +23,6 @@ if test "${enable_debug}" = "yes"; then
     AC_DEFINE(DEBUG, , [Define to enable extra debug messages])
 fi
 
-AC_ARG_ENABLE(arp,
-	      AC_HELP_STRING([--disable-arp],
-			     [Disable ARP checks if IP address already exists]),
-	      enable_arp="${enableval}", enable_arp="yes")
-if test "${enable_arp}" = "yes"; then
-    AC_DEFINE(ARPCHECK, , [Define to enable ARP checking of IP address])
-    AC_CHECK_HEADERS(net/if_arp.h, , \
-		 echo "Required ARP header file not found"
-		 exit 1
-		 )
-fi
-
 AC_ARG_ENABLE(embed,
 	      C_HELP_STRING([--enable-embed],
 			     [vfork() instead of fork() for embedded environs]),
@@ -55,7 +43,7 @@ dnl Checks for header files.
 dnl
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h paths.h sys/ioctl.h sys/time.h syslog.h unistd.h \
-		 arpa/inet.h netdb.h netinet/in.h sys/socket.h, , \
+		 arpa/inet.h netdb.h netinet/in.h sys/socket.h net/if_arp.h, , \
 		 echo "Required header file not found"
 		 exit 1
 		 )
