@@ -3,6 +3,9 @@
    Setup a siglongjmp for SIGTERM so we can execute external programs
    safely - like resolvconf -d.
 
+   ARP is now inbuilt and the #ifdefs removed.
+   New option -a disables the ARP check at runtime.
+
 ** dhcpcd-2.0.5 Released
 
 21 Apr 2006; Roy Marples <uberlord@gentoo.org>
